Sun Feb 15 14:58:07 2009  Tanaka Akira  <akr@fsij.org>

	* hash.c (hash_i): use Murmurhash.

Sun Feb 15 11:45:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_define_hooked_variable): suppress false assertion
	  with VC9.  [ruby-core:22115]

Sun Feb 15 08:35:33 2009  Tanaka Akira  <akr@fsij.org>

	* test/test_pp.rb: extract from lib/pp.rb.

	* test/test_prettyprint.rb: extract from lib/prettyprint.rb.

	* test/test_tsort.rb: extract from lib/tsort.rb.

Sun Feb 15 06:34:22 2009  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.parse): raise ArgumentError if Date._parse don't
	  extract date information.  [ruby-core:20912]

Sun Feb 15 04:48:08 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (rb_hash_uint32, rb_hash_uint, rb_hash_start, rb_hash_end),
	  include/ruby/intern.h: add Murmurhash API.  [ruby-dev:37784]

	* complex.c (nucomp_hash), array.c (rb_ary_hash), time.c (time_hash),
	  string.c (rb_str_hsah), object.c (rb_obj_hash), range.c
	  (range_hash), struct.c (rb_struct_hash), hash.c (rb_any_hash),
	  rational.c (nurat_hash): use Murmurhash.  [ruby-dev:37784]

Sun Feb 15 03:50:21 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* hash.c (rb_hash): always return a fixnum value because a return
	  value of rb_hash may be used as a hash value itself and bignums have
	  no unique VALUE.

	* test/ruby/test_hash.rb: add a test for above.

Sun Feb 15 00:45:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_uniq_bang, rb_ary_uniq): unique by the result of
	  given block.  [ruby-dev:37998]

Sun Feb 15 00:39:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_resize_capa): should not overwrite outside embedded
	  array.

Sat Feb 14 20:18:19 2009  Tanaka Akira  <akr@fsij.org>

	* test/test_time.rb: extracted from lib/time.rb.

Sat Feb 14 19:20:15 2009  Tanaka Akira  <akr@fsij.org>

	* lib/pathname.rb: obsolete methods removed.
	  [ruby-core:21564]

Sat Feb 14 13:14:18 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>
